--- a/course/janecalm_course.ipynb
+++ b/course/janecalm_course.ipynb
@@ -9,9 +9,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import r2_score\n",
+    "\n",
+    "\n",
     "\n",
     "%matplotlib inline\n",
     "DATASET_PATH = 'train.csv'\n",
@@ -19,6 +21,16 @@
     "PREPARED_DATASET_PATH = 'JaneCalm_predictions.csv'\n",
     "test = pd.read_csv(DATASET_2_PATH)\n",
     "train = pd.read_csv(DATASET_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -304,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f933b4ac450>"
+       "<matplotlib.collections.PathCollection at 0x7f4ab9a316d0>"
       ]
      },
      "execution_count": 5,
@@ -336,7 +348,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f933bcc7150>"
+       "<matplotlib.collections.PathCollection at 0x7f4ab99e2d10>"
       ]
      },
      "execution_count": 6,
@@ -402,7 +414,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f933b3a7590>"
+       "<matplotlib.collections.PathCollection at 0x7f4ab99247d0>"
       ]
      },
      "execution_count": 10,
@@ -847,7 +859,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f933b391650>"
+       "<matplotlib.collections.PathCollection at 0x7f4ab57dc410>"
       ]
      },
      "execution_count": 19,
@@ -1321,7 +1333,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f9337213c50>"
+       "<matplotlib.collections.PathCollection at 0x7f4ab57ceed0>"
       ]
      },
      "execution_count": 22,
@@ -1440,7 +1452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = RandomForestRegressor(n_estimators=1000, max_depth=18, random_state=28, max_features=7)"
+    "model = RandomForestRegressor(n_estimators=1000, max_depth=18, random_state=21, max_features=7)"
    ]
   },
   {
@@ -1456,7 +1468,7 @@
        "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "                      min_samples_leaf=1, min_samples_split=2,\n",
        "                      min_weight_fraction_leaf=0.0, n_estimators=1000,\n",
-       "                      n_jobs=None, oob_score=False, random_state=28, verbose=0,\n",
+       "                      n_jobs=None, oob_score=False, random_state=21, verbose=0,\n",
        "                      warm_start=False)"
       ]
      },
@@ -1487,7 +1499,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9568163239513829"
+       "0.9568308136692093"
       ]
      },
      "execution_count": 29,
@@ -1507,7 +1519,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7454682845401712"
+       "0.7432257700829941"
       ]
      },
      "execution_count": 30,
@@ -1527,12 +1539,12 @@
     {
      "data": {
       "text/plain": [
-       "array([4.61130383e-02, 1.23871899e-01, 2.75920615e-01, 8.60498332e-02,\n",
-       "       3.84793158e-02, 2.70460107e-02, 2.62274461e-02, 3.92861827e-02,\n",
-       "       3.67944043e-02, 8.00432812e-02, 8.21491111e-02, 6.23258634e-02,\n",
-       "       2.94525292e-02, 1.75665698e-02, 2.47992001e-02, 2.47588789e-04,\n",
-       "       2.31764182e-04, 7.90477232e-04, 8.20132645e-04, 9.29389262e-04,\n",
-       "       8.55348250e-04])"
+       "array([4.63931573e-02, 1.20302619e-01, 2.76137261e-01, 8.88418364e-02,\n",
+       "       3.96101386e-02, 2.71990436e-02, 2.58123153e-02, 3.98884909e-02,\n",
+       "       3.69044101e-02, 8.12109955e-02, 8.20678612e-02, 6.18660581e-02,\n",
+       "       2.91713069e-02, 1.68746720e-02, 2.38812471e-02, 2.42650935e-04,\n",
+       "       2.33489320e-04, 7.53323224e-04, 8.04050154e-04, 9.32776248e-04,\n",
+       "       8.72296664e-04])"
       ]
      },
      "execution_count": 31,
@@ -1950,10 +1962,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.model_selection import KFold, GridSearchCV\n",
+    "\n",
+    "xgb = XGBRegressor(n_estimators=500, learning_rate=0.08, gamma=0, subsample=0.75,\n",
+    "                           colsample_bytree=1, max_depth=7, objective ='reg:squarederror')\n",
+    "xgb.fit(X_train, y_train)\n",
+    "\n",
+    "y_train_preds = xgb.predict(X_train)\n",
+    "y_test_preds = xgb.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'XGBRegressor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-46abb268865c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Initialize XGB and GridSearch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mxgb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnthread\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobjective\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m'reg:squarederror'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mgrid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxgb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'XGBRegressor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold, GridSearchCV\n",
+    "params = {'min_child_weight':[4,5], \n",
+    "          'gamma':[i/10.0 for i in range(3,6)],  \n",
+    "          'subsample':[i/10.0 for i in range(6,11)],\n",
+    "          'max_depth': [2,3,4,7]}\n",
+    "\n",
+    "# Initialize XGB and GridSearch\n",
+    "xgb = XGBRegressor(nthread=-1, objective ='reg:squarederror') \n",
+    "\n",
+    "grid = GridSearchCV(xgb, params)\n",
+    "grid.fit(X_train,y_train) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0.3,\n",
+       "             importance_type='gain', learning_rate=0.1, max_delta_step=0,\n",
+       "             max_depth=7, min_child_weight=5, missing=None, n_estimators=100,\n",
+       "             n_jobs=1, nthread=-1, objective='reg:squarederror', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=0.6, verbosity=1)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.750640870314266\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r2_score(y_valid, grid.best_estimator_.predict(X_valid)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.74107065, 0.73086953, 0.75782151])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "cv_score = cross_val_score(grid.best_estimator_, X, y, scoring='r2', cv=KFold(n_splits=3, shuffle=True, random_state=21))\n",
+    "cv_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7437007983705005"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_score.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_name</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Square</td>\n",
+       "      <td>0.276137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rooms</td>\n",
+       "      <td>0.120303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LifeSquare</td>\n",
+       "      <td>0.088842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Social_2</td>\n",
+       "      <td>0.082068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Social_1</td>\n",
+       "      <td>0.081211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Social_3</td>\n",
+       "      <td>0.061866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DistrictId</td>\n",
+       "      <td>0.046393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>HouseYear</td>\n",
+       "      <td>0.039888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KitchenSquare</td>\n",
+       "      <td>0.039610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Ecology_1</td>\n",
+       "      <td>0.036904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Healthcare_1</td>\n",
+       "      <td>0.029171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Floor</td>\n",
+       "      <td>0.027199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HouseFloor</td>\n",
+       "      <td>0.025812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Shops_1</td>\n",
+       "      <td>0.023881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Helthcare_2</td>\n",
+       "      <td>0.016875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Shops_2_A</td>\n",
+       "      <td>0.000933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Shops_2_B</td>\n",
+       "      <td>0.000872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Ecology_3_B</td>\n",
+       "      <td>0.000804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Ecology_3_A</td>\n",
+       "      <td>0.000753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Ecology_2_A</td>\n",
+       "      <td>0.000243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Ecology_2_B</td>\n",
+       "      <td>0.000233</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     feature_name  importance\n",
+       "2          Square    0.276137\n",
+       "1           Rooms    0.120303\n",
+       "3      LifeSquare    0.088842\n",
+       "10       Social_2    0.082068\n",
+       "9        Social_1    0.081211\n",
+       "11       Social_3    0.061866\n",
+       "0      DistrictId    0.046393\n",
+       "7       HouseYear    0.039888\n",
+       "4   KitchenSquare    0.039610\n",
+       "8       Ecology_1    0.036904\n",
+       "12   Healthcare_1    0.029171\n",
+       "5           Floor    0.027199\n",
+       "6      HouseFloor    0.025812\n",
+       "14        Shops_1    0.023881\n",
+       "13    Helthcare_2    0.016875\n",
+       "19      Shops_2_A    0.000933\n",
+       "20      Shops_2_B    0.000872\n",
+       "18    Ecology_3_B    0.000804\n",
+       "17    Ecology_3_A    0.000753\n",
+       "15    Ecology_2_A    0.000243\n",
+       "16    Ecology_2_B    0.000233"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_importances = pd.DataFrame(zip(X_train.columns, model.feature_importances_), \n",
+    "                                   columns=['feature_name', 'importance'])\n",
+    "\n",
+    "feature_importances.sort_values(by='importance', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[\"Price\"] = grid.best_estimator_.predict(X_test)\n",
+    "test.loc[:, ['Id', 'Price']].to_csv('JaneCalm_predictionsG.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
